Fix issue with raffle number disappearing on mobile

--- a/app/assets/stylesheets/internal/user_progress_iphone.css.scss
+++ b/app/assets/stylesheets/internal/user_progress_iphone.css.scss
@@ -63,7 +63,7 @@ body.tiles-index, body.acts-index, .explore-search-user{
         height: 32px;
         border-radius: 50%;
         border: 0; // remove gradient color
-        background-color: $barColor; // default 100%
+        background-color: $white; // default 100%
         box-shadow: inset 0 0 7px #cbc9c9;
         /* -------------------------------------
          * Optional centered circle w/text
